<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@mipmap/logo"
            android:contentDescription="@string/imgDescirption" />
    </LinearLayout>

    <EditText
        android:id="@+id/ID"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@mipmap/login_edit_bg"
        android:drawablePadding="8dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@mipmap/login_edit_bg"
        android:drawablePadding="8dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="center_horizontal">

        <CheckBox
            android:id="@+id/save"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:text="@string/keepPwd"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/linkedText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/log"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@color/head"
        android:contentDescription=""
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/forget"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/forgotPwd"
            android:textColor="@color/colorDarkBlue" />

        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="match_parent">

        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/qq_login"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/qqLogin"
                android:textColor="@color/colorDarkBlue" />
        </LinearLayout>

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/register"
            android:textColor="@color/colorDarkBlue" />
    </LinearLayout>
</LinearLayout>